--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link href="output.css" rel="stylesheet">
 </head>
 
-<body>
-  <figure>
-    <img src="ps_logo.png">
-    <figcaption>The Map Project</figcaption>
+<body class="bod">
+  <figure class="fig">
+    <img src="ps_logo.png" alt="logo">
+    <figcaption class="figtext">The Map Project</figcaption>
   </figure>
 </body>
 
