ui overhaul in prep for demo launch

--- a/index.html
+++ b/index.html
@@ -13,33 +13,27 @@
 
 <body>
   <div class="top">
-
     <figure class="fig">
-      <img src="ps_logo.png" alt="logo">
+      <img src="diglu_logo.png" alt="logo">
     </figure>
 
     <div class="caption">
       <p class="uppercaption">Diglu</p>
-      <p class="lowercaption">Map Project</p>
     </div>
 
     <ul class="nav">
-      <li><a href=index.html>MAP</a></li>
-      <li><a href=about.html>ABOUT</a></li>
-      <li><a href="mailto: ctw54@cornell.edu">CONTACT</a></li>
+      <li><a href="index.html">MAP</a></li>
+      <li><a href="about.html">ABOUT</a></li>
+      <li><a href="mailto:digluteam@gmail.com">CONTACT</a></li>
     </ul>
-
   </div>
 
   <div class="side">
     <p class="events">ALERTS</p>
   </div>
 
-  <div class="map">
-    <gmp-map center="42.445106506347656,-76.4826431274414" zoom="14" map-id="DEMO_MAP_ID">
-      <gmp-advanced-marker position="42.445106506347656,-76.4826431274414" title="My location"></gmp-advanced-marker>
-    </gmp-map>
-  </div>
+  <div class="map" id="map"></div>
+
 </body>
 
 </html>
