--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Diglu Demo Version</title>
+  <title>Diglu Demo</title>
   <script async
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCmUxsKRLmQ4-GrtSqDoAkUv6E-nHBb-M&callback=initMap&libraries=maps,marker">
     </script>
@@ -18,7 +18,7 @@
     </figure>
 
     <div class="caption">
-      <p class="uppercaption">Diglu Demo Version</p>
+      <p class="uppercaption">Diglu Demo</p>
     </div>
 
     <button type="button" class="demobutton">ADD</button>
